Active Object and Groups #51834

Closed
opened 2017-06-18 00:40:54 +02:00 by Dzmitry · 14 comments

System Information
OS: Windows 10 64 bit
GPU: RX 470

Blender Version

Blender 2.79 and older

Short description of error

"Active Object" coloring does not appear on grouped objects, instead "Objects Grouped Active" color which sound logical. However selecting more than one grouped objects makes both of them appear as "Objects Grouped Active" which isn't logical since only one object can be active. Real active object can only be noticed by origin dot that actually displays in "Active Object" color.

Blender.jpg

I believe is that correct way is for "Active Object" to be dominant for both types, while "Objects Grouped Active" should be changed to "Objects Grouped Selected" which is currently not there, but it partly acts like it.

Exact steps for others to reproduce the error

Selecting multiple grouped objects.

**System Information** OS: Windows 10 64 bit GPU: RX 470 **Blender Version** Blender 2.79 and older **Short description of error** "Active Object" coloring does not appear on grouped objects, instead "Objects Grouped Active" color which sound logical. However selecting more than one grouped objects makes both of them appear as "Objects Grouped Active" which isn't logical since only one object can be active. Real active object can only be noticed by origin dot that actually displays in "Active Object" color. ![Blender.jpg](https://archive.blender.org/developer/F634059/Blender.jpg) I believe is that correct way is for "Active Object" to be dominant for both types, while "Objects Grouped Active" should be changed to "Objects Grouped Selected" which is currently not there, but it partly acts like it. **Exact steps for others to reproduce the error** Selecting multiple grouped objects.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Sunbeam

Added subscriber: @Sunbeam

Added subscriber: @Fledmango8

Added subscriber: @Fledmango8

Removed subscriber: @Fledmango8

Removed subscriber: @Fledmango8

Added subscribers: @pablovazquez, @dfelinto

Added subscribers: @pablovazquez, @dfelinto

I know this is a simple file, but please upload it to simplify the discussion.

I know this is a simple file, but please upload it to simplify the discussion.
Author
[Active Object and Groups.blend](https://archive.blender.org/developer/F644759/Active_Object_and_Groups.blend)
Author
Theme [north_edited.xml](https://archive.blender.org/developer/F644760/north_edited.xml)

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-07-04 15:58:06 +02:00

We do have some darkenning of selected but inactive group objects color… looks like it is nearly imperceptible, will tweak it in code.

We do have some darkenning of selected but inactive group objects color… looks like it is nearly imperceptible, will tweak it in code.

This issue was referenced by 4d124418b7

This issue was referenced by 4d124418b7e471b314a19c142a54b6a6bb0088f0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

I still think it would better for it to display in Active Object color or get setting of it own since it provides more control for user, than being slightly lighter.

I still think it would better for it to display in Active Object color or get setting of it own since it provides more control for user, than being slightly lighter.

Ideally active object in group should have own theme color, yes… but that’s more of a low-priority TODO, not really the time to handle that kind of things. ;)

Ideally active object in group should have own theme color, yes… but that’s more of a low-priority TODO, not really the time to handle that kind of things. ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51834
No description provided.