Fix T51834: Active Object and Groups color difference imperceptible

16 was not enough here, -32 seems to give OK results.